Connected to MongoDB. Read information about diploma from DB and inserted a diploma object in DB.

--- a/BlockchainCertifications/conf/application.conf
+++ b/BlockchainCertifications/conf/application.conf
@@ -3,9 +3,31 @@
 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 
-# Default database configuration using MySQL database engine
-# Connect to playdb as playdbuser
-default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/diplomas"
-db.default.username=root
-db.default.password=""
+# The mongo module
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+#module.mongo=${play.path}/modules/mongo
+
+# mongodb connection details
+#mongo.host=localhost
+#mongo.port=27017
+#mongo.database= "blockchaincertifications"
+
+#mongo.username= "cristina"
+#mongo.password= "1234"
+#mongodb.uri = "mongodb://localhost:27017/blockchaincertifications"
+
+# Mongo driver configuration
+#morphia.driver.threadsAllowedToBlockForConnectionMultiplier=10
+#morphia.driver.connectionsPerHost=20
+#morphia.driver.slaveOk=true
+
+playmorphia {
+    uri="mongodb://127.0.0.1:27017/"
+    database="blockchaincertifications"
+    models="models"
+    mongoClientFactory="controllers.mongoConfiguration.MyMongoClientFactory"
+   # username= "cristina"
+   # password= "1234"
+}
+
+play.modules.enabled  += "it.unifi.cerm.playmorphia.MorphiaModule"
